# simple_chat

./: .flake8  .gitignore  Makefile  README.md  manage.py  pyproject.toml
fixtures/users/: initial_data.json
requirements/: base.txt  local.txt
simple_chat/: asgi.py  urls.py  wsgi.py
simple_chat/apps/chat/: admin.py  apps.py  managers.py  models.py
simple_chat/apps/chat/api/: filters.py  serializers.py  urls.py  views.py
simple_chat/apps/chat/migrations/: 0001_initial.py
simple_chat/apps/users/: admin.py  apps.py  models.py
simple_chat/apps/users/api/: serializers.py
simple_chat/apps/users/migrations/: 0001_initial.py
simple_chat/settings/: base.py
simple_chat/settings/components/: django.py  drf_spectacular.py  rest_framework.py  rest_framework_simplejwt.py
simple_chat/templates/admin/: base_site.html
